--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <h1>{{title}}</h1>
-<nav>
-    <a routerLink="/car-editor">Ingreso de información</a>
-    <a routerLink="/circulation-query">Consulta de circulación</a>
-  </nav>
-<router-outlet></router-outlet>
+<p-tabMenu [model]="items"></p-tabMenu>
+<div style="padding: 0.5em;">
+  <router-outlet></router-outlet>
+</div>
