--- a/src/app/car-editor/car-editor.component.html
+++ b/src/app/car-editor/car-editor.component.html
@@ -38,7 +38,7 @@
                     </label>
                     <label>
                         Chasis:
-                            <input type="text" pInputText formControlName="vin">
+                            <input type="text" pInputText formControlName="vin" maxlength="17">
                         </label>
                         <label>
                             Información adicional:
